updates: removed circle on the template modal close

--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -536,14 +536,14 @@
       }
     }
 
-    .template-modal-close {
-      background: none;
-      border: 2px solid #0e2557;
-      padding: 0.17rem 0.56rem;
-      border-radius: 50%;
-      font-size: 24px;
-      cursor: pointer;
-    }
+    // .template-modal-close {
+    //   background: none;
+    //   border: 2px solid #0e2557;
+    //   padding: 0.17rem 0.56rem;
+    //   border-radius: 50%;
+    //   font-size: 24px;
+    //   cursor: pointer;
+    // }
   }
 
   .template-modal-body {
